seasonal data added to app tab with drop down toggle

--- a/notebooks/ar_order_complexity.Rmd
+++ b/notebooks/ar_order_complexity.Rmd
@@ -31,8 +31,8 @@ connection <- dbConnect(
   host = "localhost",
   port = 5432,
   user = "postgres",
-  password = Sys.getenv("DB_PASSWORD") # for nvim
-  # password = rstudioapi::askForPassword("Database Password") # for Rstudio
+  # password = Sys.getenv("DB_PASSWORD") # for nvim
+  password = rstudioapi::askForPassword("Database Password") # for Rstudio
 )
 ```
 
