--- a/notebooks/ar_seasonal_trends.Rmd
+++ b/notebooks/ar_seasonal_trends.Rmd
@@ -23,13 +23,13 @@ set up connection to postgres
 ```{r}
 #| code-fold: true
 connection <- dbConnect(
-    Postgres(),
-    dbname = "metalworkingsolutions",
-    host = "localhost",
-    port = 5432,
-    user = "postgres",
-    password = "postgres"
-    # password = rstudioapi::askForPassword("Database Password")
+  Postgres(),
+  dbname = "metalworkingsolutions",
+  host = "localhost",
+  port = 5432,
+  user = "postgres",
+  password = "postgres"
+  # password = rstudioapi::askForPassword("Database Password")
 )
 ```
 
@@ -64,44 +64,44 @@ dbClearResult(result_set)
 ```{r}
 #| code-fold: true
 top20_customers_2023 <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    group_by(omp_customer_organization_id) |>
-    mutate(omp_order_date = year(omp_order_date)) |>
-    filter(omp_order_date %in% 2023) |>
-    summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
-    rename(customer_id = omp_customer_organization_id) |>
-    arrange(desc(generated_revenue_2023)) |>
-    select(customer_id) |>
-    head(20)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  group_by(omp_customer_organization_id) |>
+  mutate(omp_order_date = year(omp_order_date)) |>
+  filter(omp_order_date %in% 2023) |>
+  summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
+  rename(customer_id = omp_customer_organization_id) |>
+  arrange(desc(generated_revenue_2023)) |>
+  select(customer_id) |>
+  head(20)
 ```
 
 2024
 ```{r}
 #| code-fold: true
 top20_customers_2024 <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    group_by(omp_customer_organization_id) |>
-    mutate(omp_order_date = year(omp_order_date)) |>
-    filter(omp_order_date %in% 2024) |>
-    summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
-    rename(customer_id = omp_customer_organization_id) |>
-    arrange(desc(generated_revenue_2023)) |>
-    select(customer_id) |>
-    head(20)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  group_by(omp_customer_organization_id) |>
+  mutate(omp_order_date = year(omp_order_date)) |>
+  filter(omp_order_date %in% 2024) |>
+  summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
+  rename(customer_id = omp_customer_organization_id) |>
+  arrange(desc(generated_revenue_2023)) |>
+  select(customer_id) |>
+  head(20)
 ```
 
 2023 & 2024
 ```{r}
 #| code-fold: true
 top20_customers_total <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    group_by(omp_customer_organization_id) |>
-    mutate(omp_order_date = year(omp_order_date)) |>
-    summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
-    rename(customer_id = omp_customer_organization_id) |>
-    arrange(desc(generated_revenue_2023)) |>
-    select(customer_id) |>
-    head(20)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  group_by(omp_customer_organization_id) |>
+  mutate(omp_order_date = year(omp_order_date)) |>
+  summarise(generated_revenue_2023 = sum(omp_order_total_base)) |>
+  rename(customer_id = omp_customer_organization_id) |>
+  arrange(desc(generated_revenue_2023)) |>
+  select(customer_id) |>
+  head(20)
 ```
 
 
@@ -110,35 +110,35 @@ Using plotly for interactivity.
 ```{r, out.width='100%'}
 #| code-fold: true
 p <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |>
-    group_by(customer_id, month) |>
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_2023$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_continuous(
-        breaks = seq_along(month.name),
-        labels = month.name
-    ) +
-    labs(
-        title = "Change in Customer Generated Revenue 2023",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |>
+  group_by(customer_id, month) |>
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_2023$customer_id
     )
+  ) |>
+  ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2023",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 ggplotly(p)
 ```
 
@@ -146,181 +146,181 @@ ggplot version for displaying inline better.
 ```{r, fig.width=10}
 #| code-fold: true
 customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |>
-    group_by(customer_id, month) |>
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_2023$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_continuous(
-        breaks = seq_along(month.name),
-        labels = month.name
-    ) +
-    labs(
-        title = "Change in Customer Generated Revenue 2023",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |>
+  group_by(customer_id, month) |>
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_2023$customer_id
     )
+  ) |>
+  ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2023",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 ```
 
 ## monthly change by customer, 2024
 Using plotly for interactivity 
 ```{r}
 #| code-fold: true
-p <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(year == 2024, customer_id %in% top20_customers_2024$customer_id) |>
-    group_by(customer_id, month) |>
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_2024$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_continuous(
-        breaks = seq_along(month.name),
-        labels = month.name
-    ) +
-    labs(
-        title = "Change in Customer Generated Revenue 2024",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+p1 <- customers |>
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(year == 2024, customer_id %in% top20_customers_2024$customer_id) |>
+  group_by(customer_id, month) |>
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_2024$customer_id
     )
-ggplotly(p)
+  ) |>
+  ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
+ggplotly(p1)
 ```
 
 using ggplot for better inline visibility
 ```{r, fig.width=10}
 #| code-fold: true
 customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(year == 2024, customer_id %in% top20_customers_2024$customer_id) |>
-    group_by(customer_id, month) |>
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_2024$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_continuous(
-        breaks = seq_along(month.name),
-        labels = month.name
-    ) +
-    labs(
-        title = "Change in Customer Generated Revenue 2024",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(year == 2024, customer_id %in% top20_customers_2024$customer_id) |>
+  group_by(customer_id, month) |>
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_2024$customer_id
     )
+  ) |>
+  ggplot(aes(x = month, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 ```
 
 2023 + 2024
 ```{r}
 #| code-fold: true
-p <- customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(
-        month = month(omp_order_date),
-        year = year(omp_order_date),
-        month_year = make_date(year, month)
-    ) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(customer_id %in% top20_customers_total$customer_id) |>
-    group_by(customer_id, month_year) |> # Group by month_year
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_total$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
-    labs(
-        title = "Change in Customer Generated Revenue 2023 + 2024",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+p2 <- customers |>
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(
+    month = month(omp_order_date),
+    year = year(omp_order_date),
+    month_year = make_date(year, month)
+  ) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(customer_id %in% top20_customers_total$customer_id) |>
+  group_by(customer_id, month_year) |> # Group by month_year
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_total$customer_id
     )
+  ) |>
+  ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
+  labs(
+    title = "Change in Customer Generated Revenue 2023 + 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 
-ggplotly(p)
+ggplotly(p2)
 ```
 
 ### ggplot for inline visibility
 ```{r, fig.width=10}
 #| code-fold: true
 customers |>
-    select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
-    mutate(
-        month = month(omp_order_date),
-        year = year(omp_order_date),
-        month_year = make_date(year, month)
-    ) |>
-    rename(
-        customer_id = omp_customer_organization_id,
-        generated_revenue = omp_order_total_base
-    ) |>
-    filter(customer_id %in% top20_customers_total$customer_id) |>
-    group_by(customer_id, month_year) |> # Group by month_year
-    summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
-    mutate(
-        customer_id = factor(customer_id,
-            levels = top20_customers_total$customer_id
-        )
-    ) |>
-    ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
-    geom_line() +
-    scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
-    labs(
-        title = "Change in Customer Generated Revenue 2023 + 2024",
-        x = "Month",
-        y = "Revenue ($)"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |>
+  mutate(
+    month = month(omp_order_date),
+    year = year(omp_order_date),
+    month_year = make_date(year, month)
+  ) |>
+  rename(
+    customer_id = omp_customer_organization_id,
+    generated_revenue = omp_order_total_base
+  ) |>
+  filter(customer_id %in% top20_customers_total$customer_id) |>
+  group_by(customer_id, month_year) |> # Group by month_year
+  summarise(generated_revenue = sum(generated_revenue), .groups = "drop") |>
+  mutate(
+    customer_id = factor(customer_id,
+      levels = top20_customers_total$customer_id
     )
+  ) |>
+  ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
+  labs(
+    title = "Change in Customer Generated Revenue 2023 + 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 ```
 
 ### New query to select jobs
@@ -345,62 +345,62 @@ dbClearResult(result_set)
 
 ```{r}
 #| code-fold: true
-p <- jobs |>
-    filter(customer_id %in% top20_customers_total$customer_id) |>
-    group_by(customer_id) |>
-    summarise(n_jobs = n_distinct(job_id)) |>
-    arrange(desc(n_jobs)) |>
-    ggplot(aes(
-        x = fct_reorder(customer_id, -n_jobs),
-        y = n_jobs,
-        text = paste("Customer:", customer_id, "\nNumber of Jobs:", n_jobs)
-    )) +
-    geom_col(fill = "#445162") +
-    labs(
-        title = "Number of jobs by Customer",
-        x = "Customer",
-        y = "Number of Jobs"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 55, hjust = 1)
-    )
+p3 <- jobs |>
+  filter(customer_id %in% top20_customers_total$customer_id) |>
+  group_by(customer_id) |>
+  summarise(n_jobs = n_distinct(job_id)) |>
+  arrange(desc(n_jobs)) |>
+  ggplot(aes(
+    x = fct_reorder(customer_id, -n_jobs),
+    y = n_jobs,
+    text = paste("Customer:", customer_id, "\nNumber of Jobs:", n_jobs)
+  )) +
+  geom_col(fill = "#445162") +
+  labs(
+    title = "Number of jobs by Customer",
+    x = "Customer",
+    y = "Number of Jobs"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
 
-ggplotly(p, tooltip = "text")
+ggplotly(p3, tooltip = "text")
 ```
 ### Number of jobs by month of due date
 ```{r}
 #| code-fold: true
-p <- jobs |>
-    filter(customer_id %in% top20_customers_total$customer_id) |>
-    mutate(
-        month = month(production_due_date),
-        year = year(production_due_date),
-        month_year = make_date(year, month)
-    ) |>
-    group_by(month_year) |>
-    summarise(n_jobs = n_distinct(job_id)) |>
-    arrange(desc(n_jobs)) |>
-    ggplot(aes(
-        x = month_year,
-        y = n_jobs,
-        text = paste(
-            "Month:", month_year,
-            "\nNumber of jobs:", n_jobs
-        )
-    )) +
-    geom_col(fill = "#445162") +
-    labs(
-        title = "Number of jobs by Due-Date",
-        x = "Date",
-        y = "Number of jobs"
-    ) +
-    theme_minimal() +
-    theme(
-        axis.text.x = element_text(angle = 45, hjust = 1)
+p4 <- jobs |>
+  filter(customer_id %in% top20_customers_total$customer_id) |>
+  mutate(
+    month = month(production_due_date),
+    year = year(production_due_date),
+    month_year = make_date(year, month)
+  ) |>
+  group_by(month_year) |>
+  summarise(n_jobs = n_distinct(job_id)) |>
+  arrange(desc(n_jobs)) |>
+  ggplot(aes(
+    x = month_year,
+    y = n_jobs,
+    text = paste(
+      "Month:", month_year,
+      "\nNumber of jobs:", n_jobs
     )
+  )) +
+  geom_col(fill = "#445162") +
+  labs(
+    title = "Number of jobs by Due-Date",
+    x = "Date",
+    y = "Number of jobs"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1)
+  )
 
-ggplotly(p, tooltip = "text")
+ggplotly(p4, tooltip = "text")
 ```
 
 
