added revenue plots
revenue plots added for both 23 and 24 and total.

--- a/notebooks/ar_order_complexity.Rmd
+++ b/notebooks/ar_order_complexity.Rmd
@@ -476,6 +476,7 @@ dbClearResult(result_set)
 
 ### customer revenue 2023
 ```{r}
+#| code-fold: true
 p5 <- customer_revenue_23 |>
   head(20) |>
   ggplot(
